samples/_failures_safe/1761480426_18bc41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01cb8476.c: In function ‘main’:
./samples/SAFE/__tmp_01cb8476.c:127:12: error: missing terminating " character
  127 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_01cb8476.c:127:5: error: expected expression at end of input
  127 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_01cb8476.c:127:5: error: expected declaration or statement at end of input
